--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				</div>
 				<h3 class="mt-4 carrera wow zoomIn" data-wow-duration="2s" data-wow-delay="0s">"A creative, happy and organizative mind"</h3>
 				<hr class="divider bold wow bounceIn" data-wow-duration="3s" data-wow-delay="0s">
-				<p class="wow fadeIn" data-wow-duration="2s" data-wow-delay="0s">I´m a 20 years old student from Tegucigalpa, Honduras. I´m in senior year of my major in Audiovisual Comumunications and Advertising at UNITEC, enfocated in strategic communication.</p>
+				<p class="wow fadeIn" data-wow-duration="2s" data-wow-delay="0s">I´m a 20 years old student from Tegucigalpa, Honduras. I´m in senior year of my major in Audiovisual communications and advertising at UNITEC, enfocated in strategic communication.</p>
 				
 				<a href="https://www.linkedin.com/in/dana-d%C3%ADaz-valle-943292196/" class="btn btn-light" target="_blank">Curriculum</a>
             </div>
